<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pac-Gravity</string>
	<string name="singleplayer">SinglePlayer</string>
    <string name="multiplayer">MultiPlayer</string>
    <string name="exit">Exit Game</string>
    <string name="options">Options</string>
    <string name="about">About</string>
    <string name="about_title">About/Help</string>
    <string name="back">Back</string>
    <string name="howtoplay">How  to  play  </string>
    
    <string name="about_game_text">
    				\n
    				ABOUT PACMON:\n
    				Pacmon is a game inspired by the\n
    				classic game pacman. The original\n 
    				design, concept and names are\n 
    				copyright of NAMCO.\n
    				Pacmon is NOT the original pacman\n
    				game and does not provide a similar\n
    				gaming experience. The source code\n
    				are available under MIT license\n
    				free of charge. You can contact\n
    				the author to gain source code.\n
    				Game artwork is copyright of pacmon\n
    				and Game sounds are taken from\n
    				freesound.org under the Creative\n
    				Commons License by user Timbre\n
    				
    				SUPPORT:\n
    				email us: pacmon.info@gmail.com
    				</string>
	<string name="how_to_play_text">
					\n
					HOW TO PLAY:\n
					User control pacmon using accelerometer.\n
					Tilt left to move Pacmon left.\n
					Tilt right to move Pacmon right.\n
					Tilt up to move Pacmon up.\n
					Tilt down to move Pacmon down.\n\n
					MultiPlayer\n
					Two device must be connected\n
					to WiFi inorder to play against each\n
					other. One device should be\n
					the server and another one should\n
				    be the client.
					</string>
</resources>