<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView 
        android:id="@+id/ivPacman"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:src="@drawable/menu_title"
        />
    <Button
        android:id="@+id/bSingle"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="@android:color/white"
        android:textSize="25dp"
        android:text="@string/singleplayer" />

    <Button
        android:id="@+id/bMulti"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="@android:color/white"
        android:textSize="25dp"
        android:text="@string/multiplayer" />

    <Button
        android:id="@+id/bOptions"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="@android:color/white"
        android:textSize="25dp"
        android:text="@string/options" />
    
    <Button
        android:id="@+id/bAbout"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="@android:color/white"
        android:textSize="25dp"
        android:text="@string/about" />
    
    <Button
        android:id="@+id/bExit"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="@android:color/white"
        android:textSize="25dp"
        android:text="@string/exit"  />"
    
    
</LinearLayout>